[package]
name = "duxnet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"
base64 = "0.21"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"